mType/tests/testFiles/import/error/mixedcircular/MixedB.mt
import { MixedA } from "./MixedA.mt"

class MixedB {
    fun test(): String {
        var a = MixedA();
        return "B uses A (CIRCULAR!)";
    }
}
